[package]
name = "enum_meta"
version = "0.7.0"
authors = ["Phillip Lord <phillip.lord@newcastle.ac.uk>"]
description = "Add metadata to Enum Variants"

repository = "https://github.com/phillord/enum_meta"
keywords = ["enum", "metadata", "language"]
license = "MIT/Apache-2.0"
categories = ["data-structures"]
readme = "README.md"
